feat(core): Implement global exception handling from StudentMapper to AcademicCalculator