@@ -7,29 +7,39 @@ import com.maplewood.model.CourseHistory;
 import com.maplewood.model.Enrollment;
 import com.maplewood.model.Semester;
 import com.maplewood.model.Student;
+import com.maplewood.util.AcademicCalculator;
+import lombok.RequiredArgsConstructor;
 import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
+@RequiredArgsConstructor
 public class StudentMapper {
 
-        public StudentProfileDTO toProfileDTO(@NonNull Student student, List<CourseHistory> passedCourses,
-                        int creditsToGraduate) {
-                int creditsEarned = (int) passedCourses.stream()
-                                .mapToDouble(ch -> ch.getCourse().getCredits())
-                                .sum();
+        private final AcademicCalculator academicCalculator;
 
-                int remainingCredits = Math.max(0, creditsToGraduate - creditsEarned);
-                double progressPercentage = (double) creditsEarned / creditsToGraduate * 100;
+        public StudentProfileDTO toProfileDTO(
+                        @NonNull Student student,
+                        List<CourseHistory> passedCourses,
+                        int creditsToGraduate,
+                        double gpa) {
+                // total credits the student has already earned
+                // total credits the student has already earned
+                int creditsEarned = academicCalculator.calculateCreditsEarned(passedCourses);
+                // how many credits are still needed to graduate
+                int remainingCredits = academicCalculator.calculateRemainingCredits(creditsToGraduate, creditsEarned);
+
+                double progressPercentage = academicCalculator.calculateProgress(creditsToGraduate, creditsEarned);
 
                 return StudentProfileDTO.builder()
                                 .id(student.getId())
-                                .fullName(student.getFirstName() + " " + student.getLastName())
+                                .fullName("%s %s".formatted(
+                                                student.getFirstName(),
+                                                student.getLastName()))
                                 .gradeLevel(student.getGradeLevel())
-                                .gpa(0.0) // GPA calculation requires letter grade mapping, set to 0.0 for now
+                                .gpa(gpa)
                                 .creditsEarned(creditsEarned)
                                 .creditsToGraduate(creditsToGraduate)
                                 .remainingCredits(remainingCredits)
@@ -37,26 +47,39 @@ public class StudentMapper {
                                 .build();
         }
 
-        public StudentScheduleDTO toScheduleDTO(@NonNull Student student, List<Enrollment> enrollments,
+        public StudentScheduleDTO toScheduleDTO(
+                        @NonNull Student student,
+                        List<Enrollment> enrollments,
                         Semester semester) {
-                List<ScheduleItemDTO> scheduleItems = enrollments.stream()
-                                .map(e -> ScheduleItemDTO.builder()
-                                                .courseName(e.getCourseSection().getCourse().getName())
-                                                .courseCode(e.getCourseSection().getCourse().getCode())
-                                                .teacherName(e.getCourseSection().getTeacher().getFirstName() + " "
-                                                                + e.getCourseSection().getTeacher().getLastName())
-                                                .classroomId(e.getCourseSection().getClassroomId())
-                                                .dayOfWeek(e.getCourseSection().getTimeSlot().getDayOfWeek())
-                                                .startTime(e.getCourseSection().getTimeSlot().getStartTime())
-                                                .endTime(e.getCourseSection().getTimeSlot().getEndTime())
-                                                .build())
-                                .collect(Collectors.toList());
+                var scheduleItems = enrollments.stream()
+                                .map(this::toScheduleItem)
+                                .toList();
 
                 return StudentScheduleDTO.builder()
                                 .studentId(student.getId())
                                 .studentName(student.getFirstName() + " " + student.getLastName())
-                                .semesterName(semester != null ? semester.getName() : "N/A")
+                                .semesterName(semester == null ? "N/A" : semester.getName())
                                 .schedule(scheduleItems)
                                 .build();
         }
+
+        private ScheduleItemDTO toScheduleItem(Enrollment enrollment) {
+                var section = enrollment.getCourseSection();
+                var course = section.getCourse();
+                var teacher = section.getTeacher();
+                var timeSlot = section.getTimeSlot();
+
+                return ScheduleItemDTO.builder()
+                                .courseName(course.getName())
+                                .courseCode(course.getCode())
+                                .teacherName("%s %s".formatted(
+                                                teacher.getFirstName(),
+                                                teacher.getLastName()))
+                                .classroomId(section.getClassroomId())
+                                .dayOfWeek(timeSlot.getDayOfWeek())
+                                .startTime(timeSlot.getStartTime())
+                                .endTime(timeSlot.getEndTime())
+                                .build();
+        }
+
 }
